syntax = "proto3";

package order;
option go_package = "github.com/yourorg/microservices/proto/order";

service OrderService {
  rpc CreateOrder (CreateOrderRequest) returns (CreateOrderResponse);
  rpc GetOrder (GetOrderRequest) returns (GetOrderResponse);
  rpc GetDeliveryStatus (GetDeliveryStatusRequest) returns (GetDeliveryStatusResponse);
}

message CreateOrderRequest {
  string user_id = 1;
  repeated OrderItem items = 2;
  string delivery_address = 3;
}

message OrderItem {
  string product_id = 1;
  int32 quantity = 2;
  double price = 3;
}

message CreateOrderResponse {
  string order_id = 1;
  string status = 2;
  string message = 3;
}

message GetOrderRequest {
  string order_id = 1;
}

message GetOrderResponse {
  string order_id = 1;
  string user_id = 2;
  string status = 3;
  repeated OrderItem items = 4;
  double total_amount = 5;
  string created_at = 6;
}

message GetDeliveryStatusRequest {
  string order_id = 1;
}

message GetDeliveryStatusResponse {
  string order_id = 1;
  string delivery_status = 2;
  string estimated_delivery = 3;
  string tracking_number = 4;
}
